# Axolotl

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
build-src-Desktop_Qt_5_12_0_MSVC2017_32bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-src-Desktop_Qt_5_12_0_MSVC2017_32bit-Debug/debug/: moc_mainwindow.cpp  moc_predefs.h  qrc_resources.cpp  src.ilk
scripts/: build_mac.sh  build_msvc.bat
src/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  filedirectory.cpp  filedirectory.h  files.cpp  files.h  filetab.cpp  filetab.h  findwordwindow.cpp  findwordwindow.h  findwordwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  plugindialog.cpp  plugindialog.h  plugininterfaces.h  resources.qrc  src.pro  syntaxhighlighter.cpp  syntaxhighlighter.h  tabbar.cpp  tabbar.h  tabwidget.cpp  tabwidget.h
src/imgs/: CMakeLists.txt
src/plugins/testplugin/: testplugin.cpp  testplugin.h  testplugin.pro  testplugin_global.h
